[tool.poetry]
name = "stereo-vision"
version = "0.1.0"
description = ""
authors = ["Sanjeev Shakya <sanjevsakya@gmail.com>"]
maintainers = ["Sanjeev Shakya <sanjevsakya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.2"
numpy = "^1.21.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
dev = "stereo_vision.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
